--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 body,
 .font-family-primary {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Rubik', sans-serif;
   line-height: 1.5;
   letter-spacing: 0.85px;
 }
