--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -45,7 +45,20 @@ body {
 }
 
 /* Box Shadow */
-.box {
+.box-light {
+    /*background-color: #fff:*/
+    background-color: #fff;
+	position: relative;
+    width: 100%;
+    padding: 2rem;
+    margin: 1rem 0;
+    border-radius: 12px;
+	-webkit-transition: box-shadow 0.2s ease;
+	-o-transition: box-shadow 0.2s ease;
+	transition: box-shadow 0.2s ease;
+}
+
+.box-dark {
     /*background-color: #fff:*/
     background-color: #242526;
 	position: relative;
@@ -57,6 +70,7 @@ body {
 	-o-transition: box-shadow 0.2s ease;
 	transition: box-shadow 0.2s ease;
 }
+
 .box-shadow {
     box-shadow: 0 2px 20px rgba(0,0,0,0.08);
 }
@@ -74,7 +88,7 @@ body {
 	padding: 40px 0;
 }
 .section-no-pad {
-	padding: 0px 0;
+	padding: 0px 30px;
 }
 
 .section-bg {
