--- a/assets/css/color.css
+++ b/assets/css/color.css
@@ -94,7 +94,8 @@ a.text-gray:focus {
 	color:#e4e6eb;	
 }
 .text-facebook-dark2{
-	color:#B0B3B8;	
+	color:#d9eeff;
+	/* color:#B0B3B8; */	
 }
 
 /* Border */
