--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,9 @@
 body,
 .font-family-primary {
   font-family: 'Rubik', sans-serif;
-  line-height: 1.5;
+  line-height: 1.3;
   letter-spacing: 0.85px;
+  word-spacing: normal;
 }
 a,
 a:hover,
